--- a/src/containers/Board/Board.css
+++ b/src/containers/Board/Board.css
@@ -2,17 +2,10 @@
   height: 100%;
 }
 
-.Board__output {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 100%;
-  z-index: 1;
-}
 
 .Board__toolbar {
   position: fixed;
-  top: 112px;
+  top: 0;
   right: 0;
   width: 100%;
   z-index: 1;
@@ -24,13 +17,14 @@
 
 .Board__symbols {
   position: relative;
-  top: 160px;
-  height: calc(100% - 160px);
+  top: 48px;
+  height: calc(100% - 48px);
   background: #fff;
   direction: ltr; /* for grid */
   overflow-x: hidden;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+  text-align: center;
 }
 
 .Symbol {
@@ -39,6 +33,15 @@
   background: none;
   cursor: pointer;
   will-change: transform;
+  width: 30%;
+  height: 150px;
+  margin: 8px;
+}
+
+@media (min-width: 600px) {
+  .Symbol {
+    width: 20%;
+  }
 }
 
 .Symbol:focus {
